nginx/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: todo_route
            virtual_hosts:
            - name: todo
              domains:
              - "*"
              routes:
              - match:
                  prefix: /todo
                route:
                  cluster: todo
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: todo
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: todo
        port_value: 5000
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
